k8s/10-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: studyjam-backend
  namespace: studyjam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: studyjam-backend
  template:
    metadata:
      labels:
        app: studyjam-backend
    spec:
      containers:
        - name: backend
          image: africa-south1-docker.pkg.dev/dvt-lab-devfest-2025/studyjam-repo/studyjam-backend:gke-latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: studyjam-backend
  namespace: studyjam
spec:
  type: ClusterIP
  selector:
    app: studyjam-backend
  ports:
    - port: 3000
      targetPort: 3000
